--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "css-loader": "^0.28.7",
     "koa": "^2.4.1",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "mongodb": "^3.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
