--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,11 @@
     "presets": [
         "es2015",
         "react"
+    ],
+    "plugins": [
+        ["import", {
+            "libraryName": "antd-mobile",
+            "style": "css"
+        }]
     ]
 }
