--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd-mobile": "^2.1.3",
     "axios": "^0.17.1",
+    "babel-plugin-import": "^1.6.3",
     "css-loader": "^0.28.7",
     "koa": "^2.4.1",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.3.0",
+    "koa-session-minimal": "^3.0.4",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
     "less": "^2.7.3",
