--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config webpack.config.js --hot --history-api-fallback",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node server/index",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
@@ -39,7 +43,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "file-loader": "^1.1.6",
     "path": "^0.12.7",
-    "react-hot-loader": "^3.1.3"
+    "react-hot-loader": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^1.1.6",
+    "url-loader": "^0.6.2"
   }
 }
